complete DataAnalysis Notebook

--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -532,13 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1460, 24)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1460 entries, 0 to 1459\n",
       "Data columns (total 24 columns):\n",
@@ -574,7 +575,8 @@
     }
    ],
    "source": [
-    "df.info()"
+    "print(df.shape)\n",
+    "df.info()\n"
    ]
   },
   {
