Spell check in DataAnalysis Notebook

--- a/jupyter_notebooks/02 - DataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - DataAnalysis.ipynb
@@ -51,10 +51,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In case you have any additional comments that don't fit in the previous bullets, please state them here."
+    "* This notebook was desinged and follows the principles set out by Code Institute in the Predictive Analytics lessons and Walkthrough projects. The code written in this work book has taken influence from these lessons and projects but has been modiefied, in some cases such as the graphical design, heavily modified by myself in order to suit the needs for this project."
    ]
   },
   {
@@ -167,10 +168,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Section 1 content"
+    "The first step is simply to load in our raw data that we collected in the previous notebook."
    ]
   },
   {
@@ -424,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Pandas report we have generated provides a lot of very useful insights, we can see straight away a summary of each variable in our data. This summary details infrmation such as the mean, min and max values, the number of missing values if any, and a graph showing the distribution of values.\n",
+    "The Pandas report we have generated provides a lot of very useful insights, we can see straight away a summary of each variable in our data. This summary details information such as the mean, min and max values, the number of missing values if any, and a graph showing the distribution of values.\n",
     "\n",
     "* An instant take away from this report is the amount of missing values, if we have a look at the alerts tab we can see that 8 columns contain missing values. Missing values appear in both numerical and categorical variables, there are various different avenues we can take to deal with missing values. These will be reviwed in Data Cleaning."
    ]
@@ -454,7 +456,7 @@
     "    * Spearman correlation assess the monotonic relation between vairables. Again it provides a value between -1 and +1.\n",
     "\n",
     "2. These two tests only evaluate the correlation of numerical values. Therefore we are not getting any correlation information regarding our categorical variables such as Kitchen Quality. \n",
-    "    * In order to evaluate these vairbales in conjucture with the rest I will performe some simple data cleaning and feature engineering.\n",
+    "    * In order to evaluate these vairbales in conjucture with the rest I will perform some simple data cleaning and feature engineering.\n",
     "    * The data will have the null values amended, categorical variables will have 'missing' in place of null values, and the mean will be added in place of any null values in the numerical data.\n",
     "    * One hot encoder will then be used to convert the categorical variables to a binary classification allowing us to evaluate them using spearman and pearson correlation tests.\n",
     "3. The results of these 4 tests will then be evaluated and the leading variables that show the greatest correlation will be plotted.   "
@@ -1020,7 +1022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upon completion of our correlation tests, we can take the top 5 correlation levels for both sets of tests to review if any differences have arised."
+    "Upon completion of our correlation tests, we can take the top 6 correlation levels for both sets of tests to review if any differences have arised."
    ]
   },
   {
@@ -50940,7 +50942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* To review the 6 variables that were highligthed and our assumptions made on them wee as follows:\n",
+    "* To review, the 6 variables that were highligthed and our assumptions made on them are as follows:\n",
     "    1. A house with a high sales price typically has a large 1st floor square footage.\n",
     "    2. A house with a high sales price typically has a large garage square footage.\n",
     "    3. A house with a high sales price typically has a large above grade (ground) living area square footage.\n",
@@ -50949,7 +50951,7 @@
     "    6. A house with a high sales price typically was built more recently.\n",
     "\n",
     "\n",
-    "* Upon further analysis of these variables through plotting we can identify that the each variable does indeed have a strong postive correlation to the sales price as indicated by our postive trendlines. Therefore we can assume they may be well suited for predicting the future sales price of an unseen house.\n",
+    "* Upon further analysis of these variables through plotting we can confirm that each variable does indeed have a strong postive correlation to the sales price as indicated by our postive trendlines. Therefore we can assume they may, be well suited for predicting the future sales price of an unseen house.\n",
     "    * It is clear through our analysis that some of our identified varibales look to have a greater impact then others, for example the GrLivArea and TotalBsmtSF look to have a greater influence over sales price then the year built. However all variables look to have an impact so all will be considered during our modelling.\n",
     "\n",
     "* The next step is to clean the data prior to feature engineering."
