spell check in jupyter notebooks

--- a/jupyter_notebooks/02 - DataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - DataAnalysis.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* This notebook was desinged and follows the principles set out by Code Institute in the Predictive Analytics lessons and Walkthrough projects. The code written in this work book has taken influence from these lessons and projects but has been modiefied, in some cases such as the graphical design, heavily modified by myself in order to suit the needs for this project."
+    "* This notebook was designed and follows the principles set out by Code Institute in the Predictive Analytics lessons and Walkthrough projects. The code written in this work book has taken influence from these lessons and projects but has been modiefied, in some cases such as the graphical design, heavily modified by myself in order to suit the needs for this project."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "source": [
     "The Pandas report we have generated provides a lot of very useful insights, we can see straight away a summary of each variable in our data. This summary details information such as the mean, min and max values, the number of missing values if any, and a graph showing the distribution of values.\n",
     "\n",
-    "* An instant take away from this report is the amount of missing values, if we have a look at the alerts tab we can see that 8 columns contain missing values. Missing values appear in both numerical and categorical variables, there are various different avenues we can take to deal with missing values. These will be reviwed in Data Cleaning."
+    "* An instant take away from this report is the amount of missing values, if we have a look at the alerts tab we can see that 8 columns contain missing values. Missing values appear in both numerical and categorical variables, there are various different avenues we can take to deal with missing values. These will be reviewed in Data Cleaning."
    ]
   },
   {
@@ -225,7 +225,7 @@
     "    * Spearman correlation assess the monotonic relation between vairables. Again it provides a value between -1 and +1.\n",
     "\n",
     "2. These two tests only evaluate the correlation of numerical values. Therefore we are not getting any correlation information regarding our categorical variables such as Kitchen Quality. \n",
-    "    * In order to evaluate these vairbales in conjucture with the rest I will perform some simple data cleaning and feature engineering.\n",
+    "    * In order to evaluate these variables in conjucture with the rest I will perform some simple data cleaning and feature engineering.\n",
     "    * The data will have the null values amended, categorical variables will have 'missing' in place of null values, and the mean will be added in place of any null values in the numerical data.\n",
     "    * One hot encoder will then be used to convert the categorical variables to a binary classification allowing us to evaluate them using spearman and pearson correlation tests.\n",
     "3. The results of these 4 tests will then be evaluated and the leading variables that show the greatest correlation will be plotted.   "
