--- a/jupyter_notebooks/04 - FeatureEngineering.ipynb
+++ b/jupyter_notebooks/04 - FeatureEngineering.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In case you have any additional comments that don't fit in the previous bullets, please state them here."
+    "* This notebook was designed and follows the principles set out by Code Institute in the Predictive Analytics lessons and Walkthrough projects. The code written in this work book has taken influence from these lessons and projects but has been modiefied, in some cases such as the graphical design, heavily modified by myself in order to suit the needs for this project."
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We will use the function defined in the Code Institute Feature Engineering Lessons to help in the FeatureEngineering process.\n",
+    "* We will use the function defined in the Code Institute Feature Engineering Lessons to help in the Feature Engineering process.\n",
     "* You can see the Function below."
    ]
   },
@@ -258,7 +258,7 @@
    "source": [
     "sns.set(style=\"whitegrid\")\n",
     "warnings.filterwarnings('ignore')\n",
-    "\n",
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "def FeatureEngineeringAnalysis(df,analysis_type=None):\n",
@@ -366,7 +366,7 @@
     "  sns.countplot(data=df_feat_eng, x=col,palette=['#432371'],order = df_feat_eng[col].value_counts().index)\n",
     "  plt.xticks(rotation=90) \n",
     "  plt.suptitle(f\"{col}\", fontsize=30,y=1.05)        \n",
-    "  plt.show();\n",
+    "  plt.show()\n",
     "  print(\"\\n\")\n",
     "\n",
     "\n",
@@ -381,7 +381,7 @@
     "  axes[1].set_title('QQ Plot')\n",
     "  axes[2].set_title('Boxplot')\n",
     "  fig.suptitle(f\"{variable}\", fontsize=30,y=1.05)\n",
-    "  plt.show();\n",
+    "  plt.show()\n",
     "\n",
     "\n",
     "def FeatEngineering_CategoricalEncoder(df_feat_eng,column):\n",
@@ -966,12 +966,12 @@
    "source": [
     "* By working down this notebook we have come to the conclusion on several key steps.\n",
     "    * After an intial analysis of the various numerical transformations we methodically went through each variable and analysed the results of each transformation.\n",
-    "    * We then established which transformations showed the most promisisng results and these were the results: \n",
+    "    * We then established which transformations showed the most promising results and these were the results: \n",
     "       * 1stFlrSF - log_e\n",
     "       * GrLivArea - log_e\n",
     "       * LotArea - log_e\n",
     "       * BsmtUnfSF - yeo_johnson\n",
-    "    * As such we shall be implementing these feature engineering steps into our pipleine when ttraining the model.\n",
+    "    * As such we shall be implementing these feature engineering steps into our pipleine when training the model.\n",
     "    * We then did a smart correlated selection in order to identify any features of unimportance that may be dropped, these were the results:\n",
     "        * 2ndFlrSF\n",
     "        * GarageYrBlt\n",
