--- a/jupyter_notebooks/03 - DataCleaning.ipynb
+++ b/jupyter_notebooks/03 - DataCleaning.ipynb
@@ -33,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,13 +41,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In case you have any additional comments that don't fit in the previous bullets, please state them here."
+    "* This notebook was designed and follows the principles set out by Code Institute in the Predictive Analytics lessons and Walkthrough projects. The code written in this work book has taken influence from these lessons and projects but has been modiefied, in some cases such as the graphical design, heavily modified by myself in order to suit the needs for this project."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,6 +177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -190,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having loaded our data we want to assess the distrobution of the variables that contain missing data."
+    "Having loaded our data we want to assess the distribution of the variables that contain missing data."
    ]
   },
   {
@@ -225,6 +232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,6 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "\n",
     "def heatmap_corr(df, threshold, figsize=(20, 12), font_annot=8):\n",
     "    if len(df.columns) > 1:\n",
@@ -359,6 +368,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -636,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Upon reviweing the test set we can see the split is extrealy similar to the split of the raw data. As expected the same 9 variables have been flagged with a slight decrease in the the percantage of missing data, however we still see theat EnclosedPorch and WoodDeckSF have 90.41% and 88.53% missing data respectivly so we shall copntinue to work on the assumption that they will be of no help in answering the business requiremets and will be dropped due to this."
+    "* Upon reviweing the test set we can see the split is extrealy similar to the split of the raw data. As expected the same 9 variables have been flagged with a slight decrease in the the percantage of missing data, however we still see theat EnclosedPorch and WoodDeckSF have 90.41% and 88.53% missing data respectivly so we shall continue to work on the assumption that they will be of no help in answering the business requiremets and will be dropped due to this."
    ]
   },
   {
@@ -730,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As stated above we have a large list of columns all of which were float64 variables, that we, as a base defined imputing the mean as a potential solution. However uponm inspection of the data, we can deduce that imputing the mean my not be the most optimum solution.\n",
+    "As stated above we have a large list of columns all of which were float64 variables, that we, as a base defined imputing the mean as a potential solution. However upon inspection of the data, we can deduce that imputing the mean my not be the most optimum solution.\n",
     "The float64 variables are: ['2ndFlrSF', 'BedroomAbvGr', 'GarageYrBlt', 'LotFrontage', 'MasVnrArea'] "
    ]
   },
@@ -825,7 +835,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see we have 4 columns left that conntain null values and require cleaning. The next one that I belive will be easily sorted is LotFrontage."
+    "As we can see we have 4 columns left that contain null values and require cleaning. The next one that I believe will be easily sorted is LotFrontage."
    ]
   },
   {
@@ -974,7 +984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a similar method to our previous 3 rows, we shall query the null values of BsmtFinType1 against BsmtFinSF1. the aformentioned variable describes the surface area of the basement that is finished. if the value of this is 0 then we can conclude that the basment is unfinished and therefore we can impute 'Unf' into our null values."
+    "In a similar method to our previous 3 rows, we shall query the null values of BsmtFinType1 against BsmtFinSF1. The aformentioned variable describes the surface area of the basement that is finished. if the value of this is 0 then we can conclude that the basment is unfinished and therefore we can impute 'Unf' into our null values."
    ]
   },
   {
@@ -1074,7 +1084,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see we have our final 2 variables left to clean. These have been left till last as they both refer to the garage and like woth the BsmtFinType1 we may see links that help us impute accurate data for the null values."
+    "As we can see we have our final 2 variables left to clean. These have been left till last as they both refer to the garage and like with the BsmtFinType1 we may see links that help us impute accurate data for the null values."
    ]
   },
   {
@@ -1115,7 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly to the method used when cleaning BsmtfinType1, we shall use another variable to infer information about the GarageFinish. If we look at GarageArea, we can assume that if GarageArea equals 0 then GarageFinish shoudl equal 'None'. "
+    "Similarly to the method used when cleaning BsmtfinType1, we shall use another variable to infer information about the GarageFinish. If we look at GarageArea, we can assume that if GarageArea equals 0 then GarageFinish should equal 'None'. "
    ]
   },
   {
@@ -1378,9 +1388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Looking at the effect on the distribution of these variables we can see a bit more of s peak at LotFrontage where we imputed the mean.\n",
+    "* Looking at the effect on the distribution of these variables we can see a bit more of a peak at LotFrontage where we imputed the mean.\n",
     "* The GarageYrBlt is skewed heavily due to the addition of 0 values.\n",
-    "* Everything else has remained verey similar."
+    "* Everything else has remained very similar."
    ]
   },
   {
@@ -1490,7 +1500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With everything working as expected we will now apply the same change sto the train and test sets."
+    "With everything working as expected we will now apply the same changes to the train and test sets."
    ]
   },
   {
